--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "jasmine-core": "^2.5.2",
+    "jquery": "^3.1.1",
     "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.2",
     "socket.io-client": "^1.7.2",
@@ -94,6 +95,7 @@
     "@angular/compiler-cli": "2.4.6",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.34",
+    "@types/jquery": "^2.0.40",
     "@types/node": "^7.0.0",
     "@types/selenium-webdriver": "~2.53.39",
     "@types/socket.io-client": "^1.4.29",
@@ -134,6 +136,7 @@
     "ngc-webpack": "1.1.0",
     "node-sass": "^4.5.0",
     "npm-run-all": "^4.0.1",
+    "null-loader": "^0.1.1",
     "optimize-js-plugin": "0.0.4",
     "parse5": "^3.0.1",
     "protractor": "^4.0.14",
