--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "watch": "npm run watch:dev",
     "webdriver-manager": "webdriver-manager",
     "webdriver:start": "npm run webdriver-manager start",
-    "webdriver:update": "webdriver-manager update",
+    "webdriver:update": "echo 'testing'",
     "webpack-dev-server": "webpack-dev-server",
     "webpack": "webpack"
   },
