--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "typescript"
   ],
   "author": "Patrick Stapleton <patrick@angularclass.com>",
+  "homepage": "https://github.com/angularclass/angular2-webpack-starter",
   "license": "MIT",
   "scripts": {
     "build:aot:prod": "npm run clean:dist && npm run clean:aot && webpack --config config/webpack.prod.js  --progress --profile --bail",
@@ -62,7 +63,7 @@
     "watch": "npm run watch:dev",
     "webdriver-manager": "webdriver-manager",
     "webdriver:start": "npm run webdriver-manager start",
-    "webdriver:update": "echo 'testing'",
+    "webdriver:update": "webdriver-manager update",
     "webpack-dev-server": "webpack-dev-server",
     "webpack": "webpack"
   },
@@ -165,7 +166,11 @@
     "webpack-merge": "~2.6.1"
   },
   "repository": {
-    "type": "git"
+    "type": "git",
+    "url": "https://github.com/angularclass/angular2-webpack-starter.git"
+  },
+  "bugs": {
+    "url": "https://github.com/angularclass/angular2-webpack-starter/issues"
   },
   "engines": {
     "node": ">= 4.2.1",
